MAPPTDESK-2 : Enhance template and messages

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
@@ -21,6 +21,8 @@ manage_appointmentdesks.columnDay=Day
 manage_appointmentdesks.columnDeskNumber=Desk number
 manage_appointmentdesks.columnStartCloding=Start cloding
 manage_appointmentdesks.columnEndClosing=End closing
+manage_appointmentdesks.commment=Comment
+manage_appointmentdesks.addCommment=Add a comment
 create_appointmentdesk.pageTitle=AppointmentDesk
 create_appointmentdesk.title=Create a AppointmentDesk
 create_appointmentdesk.labelIdForm=Id form
