MAPPTDESK-2: add the possibility of modifying the capacity of a slot

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
@@ -68,3 +68,5 @@ info.appointmentdesk.created=AppointmentDesk created
 info.appointmentdesk.updated=AppointmentDesk updated
 info.appointmentdesk.removed=AppointmentDesk removed
 
+error.parsing.json= Error parsing data
+error.access.denied=Access denied
