--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>2.1.1-SNAPSHOT</version>
             <type>lutece-plugin</type>
         </dependency>
+       <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+    
+        
     </dependencies>
      <properties>
         <componentName>appointmentdesk</componentName>
