MAPPTDESK-2: add the possibility of modifying the capacity of a slots betwen two date

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
@@ -70,3 +70,17 @@ info.appointmentdesk.removed=AppointmentDesk removed
 
 error.parsing.json= Error parsing data
 error.access.denied=Access denied
+
+increment.defaultTitle=Add appointment desk
+increment.labelIncrementingValue=nb appointment desk
+increment.labelType=Type
+increment.labelStartingDate=from
+increment.labelEndingDate=to
+increment.labelStartingTime=starting time
+increment.labelEndingTime=ending time
+increment.labelValidate=Validate
+
+lace=Lace
+halftimemorning=Half time morning
+halftimeafternoon=Half time afternoon
+fulltime=Full time
