--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[6.1.2,)</version>
+            <version>[7.0.0-RC-03,)</version>
             <type>lutece-core</type>
         </dependency>        
 		<dependency>
