--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages.properties
@@ -1,6 +1,6 @@
 # Plugin's keys
-plugin.provider=null
-plugin.description=null
+plugin.provider=Mairie de Paris
+plugin.description=Manage Appointment Desk
 
 
 # Admin features keys
@@ -13,13 +13,13 @@ adminFeature.ManageAppointmentDesk.description=Manage Appointment Desk
 
 
 # keys for business classes keys : AppointmentDesk
-manage_appointmentdesks.pageTitle=AppointmentDesk
-manage_appointmentdesks.title=list of AppointmentDesks
-manage_appointmentdesks.buttonAdd=Add a AppointmentDesk
+manage_appointmentdesks.pageTitle=Appointment
+manage_appointmentdesks.title=List of desks
+manage_appointmentdesks.buttonAdd=Add a desk
 manage_appointmentdesks.columnIdForm=Id form
 manage_appointmentdesks.columnDay=Day
 manage_appointmentdesks.columnDeskNumber=Desk number
-manage_appointmentdesks.columnStartCloding=Start cloding
+manage_appointmentdesks.columnStartClosing=Start closing
 manage_appointmentdesks.columnEndClosing=End closing
 manage_appointmentdesks.commment=Comment
 manage_appointmentdesks.addCommment=Add a comment
@@ -31,8 +31,8 @@ create_appointmentdesk.labelDay=Day
 create_appointmentdesk.labelDay.help=Day (help text)
 create_appointmentdesk.labelDeskNumber=Desk number
 create_appointmentdesk.labelDeskNumber.help=Desk number (help text)
-create_appointmentdesk.labelStartCloding=Start cloding
-create_appointmentdesk.labelStartCloding.help=Start cloding (help text)
+create_appointmentdesk.labelStartClosing=Start closing
+create_appointmentdesk.labelStartClosing.help=Start closing (help text)
 create_appointmentdesk.labelEndClosing=End closing
 create_appointmentdesk.labelEndClosing.help=End closing (help text)
 modify_appointmentdesk.pageTitle=AppointmentDesk
@@ -43,8 +43,8 @@ modify_appointmentdesk.labelDay=Day
 modify_appointmentdesk.labelDay.help=Day (help text)
 modify_appointmentdesk.labelDeskNumber=Desk number
 modify_appointmentdesk.labelDeskNumber.help=Desk number (help text)
-modify_appointmentdesk.labelStartCloding=Start cloding
-modify_appointmentdesk.labelStartCloding.help=Start cloding (help text)
+modify_appointmentdesk.labelStartClosing=Start closing
+modify_appointmentdesk.labelStartClosing.help=Start closing (help text)
 modify_appointmentdesk.labelEndClosing=End closing
 modify_appointmentdesk.labelEndClosing.help=End closing (help text)
 
@@ -52,16 +52,29 @@ message.confirmRemoveAppointmentDesk=Are you sure that you want to delete this A
 
 # JSR 303 constraint validator messages
 validation.appointmentdesk.Day.notEmpty=The field Day cannot be empty. Please fill it.
-validation.appointmentdesk.StartCloding.notEmpty=The field Start cloding cannot be empty. Please fill it.
+validation.appointmentdesk.StartClosing.notEmpty=The field Start closing cannot be empty. Please fill it.
 validation.appointmentdesk.EndClosing.notEmpty=The field End closing cannot be empty. Please fill it.
 
 # model attributes for validation messages
 model.entity.appointmentdesk.attribute.idForm=Id form
 model.entity.appointmentdesk.attribute.day=Day
 
+# Label Keys
+label.open=Open
+label.close=Close
+label.save=Validate
+label.cancel=Cancel
+label.today=Today
+label.chooseDate=Choose a date
+label.prevDay=Previous Day
+label.nextDay=Next day
+label.addComment=Add a comment
+label.addDesk=Add a desk
+label.surbooking=Surbooking
+label.desk=Desk
+label.deskNo=N°
 
 # Infos keys
-
 info.appointmentdesk.created=AppointmentDesk created
 info.appointmentdesk.updated=AppointmentDesk updated
 info.appointmentdesk.removed=AppointmentDesk removed
